tests/errors/surf_cont_11.experr
index must be Integer, not 'Float'
